<resources>
    <string name="app_name" translatable="false">Safegistics</string>
    <string name="log_into_safegistics">Log into Safegistics</string>
    <string name="statistics">Statistics</string>
    <string name="warnings">Warnings</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="password">Password</string>
    <string name="field_empty">This field cannot be empty</string>
    <string name="incorrect_credentials">E-Mail or Password is incorrect</string>
    <string name="internal_error">An error has occurred while processing your request</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="server_offline">Cannot connect to the server</string>
    <string name="sleeping">Driver sleeping</string>
    <string name="other">Other</string>
    <string name="date_issued">Date Issued</string>
    <string name="driver_full_name">Driver full name</string>
    <string name="severe">Severe</string>
    <string name="moderate">Moderate</string>
    <string name="type">Type</string>
    <string name="device_id">Device ID</string>
    <string name="no_driver_device">Device is not bound to any driver</string>
    <string name="no_device">Warning is not bound to any device</string>
    <string name="warning_info_title">Warning Information</string>
    <string name="severity">Severity</string>
    <string name="ok">OK</string>
    <string name="warning_amount">Warnings amount</string>
    <string name="users_count">Users count</string>
    <string name="date">Date</string>
    <string name="warning_amount_since_last_week">Warning amount since last week</string>
</resources>
