<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.statistics.StatisticsFragment"
    android:id="@+id/statistics_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/statistics_progress"
        layout="@layout/clear_progress_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/statistics_container"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="16dp">

                <androidx.cardview.widget.CardView
                    android:elevation="4dp"
                    android:id="@+id/cardview_users"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    tools:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:gravity="center_vertical|center_horizontal"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/statistics_users_icon"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                app:srcCompat="@drawable/ic_person" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/statistics_users_amount_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/users_count"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/statistics_users_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="0"
                                android:textColor="@color/colorAccent" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:elevation="4dp"
                    android:id="@+id/cardview_warnings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardview_users">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:gravity="center_vertical|center_horizontal"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/statistics_warning_icon"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                app:srcCompat="@drawable/ic_warning" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/statistics_warnings_amount_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/warning_amount"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/statistics_warnings_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="0"
                                android:textColor="@color/colorAccent" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/chart_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:text="@string/warning_amount_since_last_week"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardview_warnings" />

                <androidx.cardview.widget.CardView
                    android:elevation="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:padding="8dp"
                    android:minHeight="400dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chart_header">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/statistics_warning_chart"
                        android:layout_width="match_parent"
                        android:minHeight="400dp"
                        android:layout_height="wrap_content" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>